--- a/front/src/assets/style/variables.scss
+++ b/front/src/assets/style/variables.scss
@@ -1,10 +1,3 @@
 $desktop-width: 1440px;
 $color-font-main: #123776;
-
-@mixin wrapper-width() {
-  max-width: $desktop-width;
-}
-
-.wrapper {
-  max-width: $desktop-width;
-}
+$background-color-dark: #010101;
