--- a/front/src/assets/style/variables.scss
+++ b/front/src/assets/style/variables.scss
@@ -1,3 +1,7 @@
 $desktop-width: 1440px;
-$color-font-main: #123776;
-$background-color-dark: #010101;
+
+$color-main: #123776;
+$color-accent: #9A4948;
+$color-grey: #F2F2F2;
+$color-dark-grey: #a1a1a1;
+$color-dark: #010101;
